objects/rwscorm__Learning_Assignment_Course__c.object
<CustomObject>
    <fields>
        <fullName>rwscorm__Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media</label>
        <referenceTo>scormanywhere__Course__c</referenceTo>
        <relationshipLabel>Learning Assignment Media</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rwscorm__Learning_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Assignment</label>
        <referenceTo>redwing__Learning_Assignment__c</referenceTo>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rwscorm__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Learning Assignment Media</label>
    <nameField>
        <displayFormat>LAC-{0000}</displayFormat>
        <label>Learning Assignment Course Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Assignment Media</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>